--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 
-
 version: '3.8'
 services:
   app:
     build: .
+    environment:
+      QT_QPA_PLATFORM: 'offscreen'
     depends_on:
       - db
   db:
