--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ ticker_to_id.pt
 backtest_results.xlsx
 backtest_results.csv
 
-app/model.py
-app/modeltosm.py
+app/ml_logic/pred_models/model.py
+app/ml_logic/pred_models/modeltosm.py
 
 spy.xlsx
 backtest_results_jan_copy1.xlsx
