--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ spy.xlsx
 backtest_results_jan_copy1.xlsx
 backtest_results_jan_copy2.xlsx
 backtest_results_lit_same_thing_as_jan.xlsx
+backtest_results_jan.xlsx
 
 *.spec
 build/
